# battleship-game

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  include_guard_writer.py  simple-push.py
src/ai/: ai_common.h  attack_location_unit.h  probability_board.h  random_unit.h  ship_placement_unit.h
src/client/: client.h  client_brain.h  client_common.h  client_talker.h  game_client.h
src/core/: board.h  messages.h  networking.h  serialization.h  ship.h  util.h
src/core/exception/: exception.h
src/core/game/: board.h  game.h  game_common.h  imagine_board.h  ship.h  utils.h
src/core/networking/: messages.h  networking.h  serialization.h
src/graphic/: base_board.h  game_ui.h  graphic_common.h  graphic_utils.h
src/main/: client_main.cc  client_main.cpp
src/server/: board.h  game_state_controller.h  server.h  server_talker.h  server_talker_controller.h
src/utils/: utils.h
test/: test.cc  test_graphic.cc  test_serialization.cc  test_timer.h
